[package]
name = "liblogger"
version = "0.1.0"
edition = "2021"
description = "A production-quality, ergonomic logger in Rust"

[dependencies]
once_cell = "1.18.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.0"
chrono = "0.4.26"
liblogger_macros = { path = "../liblogger_macros" }
tokio = { version = "1.28", features = ["rt", "rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "io-std"] }
futures = "0.3"
async-trait = "0.1.68"
