[package]
name = "liblogger_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
uuid = { version = "1.4.1", features = ["v4"] }
prometheus = "0.13"
psutil = "3.2"
